@@ -5,6 +5,7 @@ Deluge 0.9.04 - "1.0.0_RC4" (In Development)
 
  GtkUI:
   * Add drag n' drop support for adding .torrent files
+  * Double-clicking on host in ConnectionManager now will connect to that host
   * Fix selecting torrents when right-clicking on them in torrentview and filestab
   * Fix new release check
   * Display 'total_wanted' instead of 'total_size' in Size column
